--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -1,6 +1,6 @@
 body {
-	margin-left: 1in;
-	margin-right: 1in;
+	margin-left: 50px;
+	margin-right: 50px;
 	<!-- font-family: arial, serif, "Times New Roman"; -->
 }
 
