--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -12,10 +12,13 @@ h1 {
 
 h2 {
 	text-align: center;
+	margin-bottom: 50px;
 }
 
 h3 {
 	text-align: center;
+	font-size: large;
+	color: blue;
 
 }
 h4 {
@@ -25,9 +28,14 @@ h4 {
 
 h5 {
 	text-align: center;
+	color: royalblue;
+	margin-top: 25px;
 }
 
 ul {
-	margin-left: 250px;
+	margin-left: 300px;
 }
 
+section {
+	margin-bottom: 50px;
+}
